--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ Description : A single html file to manage a pallette built on the classic html 
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <meta name="description" content="A signle file pallete manager to color lovers,pallete manager">
+        <meta name="description" content="A single file pallete manager to color lovers,pallete manager">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title> Palletene </title>
 	<style type="text/css">
